2005/02/28	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/28	kaffeetisch

	* t/GdkPixmap.t: Fix skip count for gtk+ versions older than 2.2.

2005/02/26	muppetman

	* xs/GtkNotebook.xs, t/GtkNotebook.t: The multiple definitions of
	some functions (in #if branches) confused the doc generation tools
	into creating multiple entries.  Folded the #if into the individual
	xsubs.  To make life easier for the caller, simply implement for
	ourselves the missing return values on older gtk+s.  Tests included.

	* xs/GdkPixmap.xs, t/GdkPixmap.t:  gdk_pixmap_create_from_xpm()
	returns NULL if the file is not found; catch this and return undef
	instead of crashing.  With a test.  Also allow undef and improve
	docs for a few parameters.

2005/02/26	kaffeetisch

	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Mark tests as
	TODO that currently fail due to what appears to be a bug in
	Test::More.

	* t/PangoLayout.t: Test pango_layout_[sg]et_attributes.

2005/02/19 20:13 (+0100) pcg

	* xs/GdkProperty.xs: document data instead of length as result value.
	* xs/GtkNotebook.xs: insert functions return gint from 2.4 onwards.

2005/02/18 15:53 (+0100) kaffeetisch

	* xs/GtkMessageDialog.xs, xs/GtkObject.xs, xs/GtkWidget.xs: Don't
	include ppport.h, it's not necessary.

2005/02/16 23:30 (-0400) muppetman

	* pm/SimpleList.pm: Catch undef iters gotten from requests for
	non-existent entries.

	* gtk2perl.h, xs/GtkPlug.xs, xs/GtkSocket.xs: invert the sense of
	the tests around GtkPlug and GtkSocket; only include them on X11,
	since that's the only platform on which they are supported.

2005/02/10 22:30 (+0100) kaffeetisch

	* t/GtkBox.t, t/GtkNotebook.t: Use TRUE and FALSE instead of 1 and
	0 or undef where appropriate.

2005/02/08 01:15 (-0400) muppetman

	* Gtk2.pm, NEWS, README, copyright.pod: unstable release 1.073

	* Makefile.PL: require Glib 1.073

	* MANIFEST: updated

2005/02/08 01:05 (-0400) muppetman
